# battery-degradation

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
battery-ingestor/: .gitignore  Cargo.toml  Dockerfile
battery-ingestor/src/: main.rs
battery-ingestor/tests/: integration_tests.rs
data/db1/: WiredTiger.turtle  WiredTiger.wt  WiredTigerHS.wt  _mdb_catalog.wt  collection-0--8142356533356918411.wt  collection-10--8142356533356918411.wt  collection-12--8142356533356918411.wt  collection-14--8142356533356918411.wt  collection-15--8142356533356918411.wt  collection-17--8142356533356918411.wt  collection-2--8142356533356918411.wt  collection-27--8142356533356918411.wt  collection-4--8142356533356918411.wt  collection-47--8142356533356918411.wt  collection-6--8142356533356918411.wt  index-1--8142356533356918411.wt  index-13--8142356533356918411.wt  index-16--8142356533356918411.wt  index-18--8142356533356918411.wt  index-28--8142356533356918411.wt  index-3--8142356533356918411.wt  index-48--8142356533356918411.wt  index-49--8142356533356918411.wt  index-5--8142356533356918411.wt  index-7--8142356533356918411.wt  index-9--8142356533356918411.wt  sizeStorer.wt
data/db2/: WiredTiger.turtle  WiredTiger.wt  WiredTigerHS.wt  _mdb_catalog.wt  collection-0--1162855201252350316.wt  collection-12--1162855201252350316.wt  collection-16--1162855201252350316.wt  collection-17--1162855201252350316.wt  collection-19--1162855201252350316.wt  collection-2--1162855201252350316.wt  collection-29--1162855201252350316.wt  collection-4--1162855201252350316.wt  (+15 more)
(+7 files in other folders)
