[package]
name = "battery-ingestor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "3.1"
chrono = "0.4"
reqwest = { version = "0.13.2", features = ["json"] }
